# quant-bot

./: .env.example  .env.template  .gitattributes  .gitignore  AUDIT.md  CHANGELOG.md  CHANGES_SUMMARY.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_SETUP.md  DATA_SOURCES.md  DEPLOY_QC.md  DISCORD.md  DOCKER.md  Dockerfile  Dockerfile.dev  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MainAlgo.py  Makefile  OBSERVABILITY.md  PR_SUMMARY.md  README.md  RISK.md  SECURITY.md  SETUP_ENV.md  SETUP_LEAN.md  TRAINING.md  TROUBLESHOOTING.md  config.yaml  docker-compose.yml  lean.json  pyproject.toml  requirements.lock.txt  requirements.txt  self_audit_report.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  retrain.yml
adapters/: __init__.py  broker.py  data.py
algos/core/: alerts.py  config_loader.py  cv_utils.py  exec_rl.py  feature_pipe.py  labels.py  polling.py  portfolio.py  regime.py  risk.py  runtime_state.py  strategy_manager.py
algos/strategies/: bull_mode.py  gamma_reversal.py  market_neutral.py  scalper_sigma.py  trend_breakout.py
apps/backtest/: __init__.py  run_backtest.py
apps/paper/: __init__.py  run_paper.py
bots/: __init__.py  discord_bot.py
config/: __init__.py  settings.py
data/: __init__.py  cache_io.py
data/cache/: __init__.py  cache_manager.py
data/providers/: __init__.py  alpha_vantage_adapter.py  base.py  fred_adapter.py  polygon_adapter.py
data_providers/: __init__.py  coingecko_client.py  tiingo_client.py
data_tools/: download_crypto.py  download_equities.py  validate.py
notebooks/: train_classifier.ipynb  train_ppo.ipynb
policies/: .gitkeep
reporting/: __init__.py  narration.py
scripts/: check_promotion_gates.py  env_smoke.py  evaluate_models.py  make_report.py  self_audit.py  train_classifier.py  train_ppo.py
services/: admin_api.py
storage/: db.py  trades.py
sweeps/: README.md  lightgbm_sweep.yaml  ppo_sweep.yaml  xgboost_sweep.yaml
telemetry/: __init__.py  wandb_utils.py
tests/: test_config_loader.py  test_db.py  test_integration.py  test_narration.py  test_purged_cv.py  test_risk_engine.py  test_settings.py  test_trend_breakout.py  test_triple_barrier.py  test_validate.py
tests/fixtures/: __init__.py  synthetic_data.py
utils/: net.py
(+4 files in other folders)
